@@ -1,3 +1,7 @@
+2010-02-23  Andrea Del Signore  <sejerpz@tin.it>
+
+Added the bindings for the checked & enabled messages
+
 2010-02-21  Andrea Del Signore  <sejerpz@tin.it>
 
 Initial import
